# i3systems_assignment

./: .tool-versions  LICENSE  README.md  pyproject.toml
notebooks/: data_processing.ipynb  initial_exploration.ipynb  naive_bayes_classifier.ipynb
pickles/: tfidf_0.joblib  tfidf_1.joblib  tfidf_2.joblib  tfidf_3.joblib  tfidf_4.joblib
src/: process.py  train.py
